# WireSentinel-XDR

./: Cargo.toml  README.md
.github/workflows/: ci.yml
analytics/: Cargo.toml
analytics/src/: engine.rs  lib.rs
attack-graph/: Cargo.toml
attack-graph/src/: engine.rs  lib.rs
cases/: Cargo.toml
cases/src/: engine.rs  lib.rs
controller/: Cargo.toml
controller/src/: dto.rs  lib.rs
detections/: Cargo.toml
detections/src/: engine.rs  lib.rs
docs/: architecture.md
edr/: Cargo.toml
edr/src/: engine.rs  lib.rs
hunting/: Cargo.toml
hunting/src/: engine.rs  lib.rs
incidents/: Cargo.toml
incidents/src/: engine.rs  lib.rs
itdr/: Cargo.toml
itdr/src/: engine.rs  lib.rs
mitre/: Cargo.toml
mitre/src/: engine.rs  lib.rs
ndr/: Cargo.toml
ndr/src/: engine.rs  lib.rs
response/: Cargo.toml
response/src/: engine.rs  lib.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  platform.rs
soar/: Cargo.toml
soar/src/: engine.rs  lib.rs
tests/: Cargo.toml
tests/tests/: detection_to_incident.rs  platform_integration.rs
xdr-core/: Cargo.toml
xdr-core/src/: emitter.rs  error.rs  lib.rs  security.rs
