[package]
name = "detections"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xdr-core = { workspace = true }
shared-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
