[package]
name = "xdr-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xdr-core = { workspace = true }
shared-types = { workspace = true }
edr = { workspace = true }
ndr = { workspace = true }
itdr = { workspace = true }
hunting = { workspace = true }
detections = { workspace = true }
incidents = { workspace = true }
cases = { workspace = true }
soar = { workspace = true }
attack-graph = { workspace = true }
mitre = { workspace = true }
response = { workspace = true }
analytics = { workspace = true }
datalake = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
